<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_big"
    android:paddingRight="@dimen/margin_big">

    <TextView
        style="@style/text_size_module_big_black_2d"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/register_welcome" />

    <TextView
        style="@style/text_size_default"
        android:layout_marginBottom="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_content_5"
        android:text="@string/register_welcome_user_mobile"
        android:textColor="@color/gray_8a" />
    <!--输入手机号-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_action_height">

        <EditText
            android:id="@+id/et_mobile"
            style="@style/common_item_edittext_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_action_height"
            android:hint="@string/please_input_phone_number_second"
            android:inputType="number"
            android:maxLength="11" />

        <ImageView
            android:id="@+id/iv_number_clear"
            style="@style/wrap_height_width"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/margin_middle"
            android:src="@drawable/ic_cancel"
            android:visibility="gone" />

    </RelativeLayout>

    <ImageView style="@style/line_parent" />
    <!--输入密码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_action_height">

        <EditText
            android:id="@+id/et_password"
            style="@style/common_item_edittext_ll"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:digits="@string/login_pass_check"
            android:hint="@string/register_pass_rule"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/ib_desensitization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="@dimen/margin_content_5"
            android:src="@drawable/login_icon_eye_close" />
    </RelativeLayout>

    <ImageView style="@style/line_parent" />

    <!--输入短信也验证码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_action_height">

        <EditText
            android:id="@+id/et_vercode"
            style="@style/common_item_edittext_ll"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:hint="@string/please_input_message_code"
            android:inputType="number"
            android:maxLength="@string/msg_code_length" />

        <Button
            android:id="@+id/btn_getcode"
            style="@style/common_get_code_gradient"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:text="@string/click_get" />
    </RelativeLayout>

    <ImageView style="@style/line_parent" />
    <!--输入邀请人-->
    <EditText
        android:id="@+id/et_friend_mobile"
        style="@style/common_item_edittext_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_action_height"
        android:hint="@string/register_recommender"
        android:inputType="number"
        android:maxLength="11" />

    <ImageView style="@style/line_parent" />
    <!--协议-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/login_checkbox"
            android:checked="true"
            android:paddingBottom="@dimen/margin_middle"
            android:paddingRight="@dimen/margin_middle"
            android:paddingTop="@dimen/margin_middle" />

        <TextView
            android:id="@+id/tv_agree_tip"
            style="@style/text_size_default"
            android:layout_alignBaseline="@id/cb_agree"
            android:layout_toRightOf="@id/cb_agree"
            android:text="@string/register_agree"
            android:textColor="@color/gray_8a" />

        <TextView
            android:id="@+id/tv_agree_rule"
            style="@style/text_size_default"
            android:layout_alignBaseline="@id/cb_agree"
            android:layout_toRightOf="@id/tv_agree_tip"
            android:text="@string/register_user_rule"
            android:textColor="@color/blue_00" />

        <TextView
            android:id="@+id/tv_privacy_protocol"
            style="@style/text_size_default"
            android:layout_below="@id/tv_agree_rule"
            android:layout_marginTop="@dimen/margin_content_5"
            android:layout_toRightOf="@id/tv_agree_tip"
            android:text="@string/register_privacy_protocol"
            android:textColor="@color/blue_00" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/long_button_style"
        android:layout_marginTop="@dimen/margin_big"
        android:enabled="false"
        android:text="@string/register_title" />


</LinearLayout>